Salesforce Assessment II

--- a/Salesforce Assessment II/MichaelKevinAlabiDuobu_ShoppingCart_201105/index.html
+++ b/Salesforce Assessment II/MichaelKevinAlabiDuobu_ShoppingCart_201105/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's World</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/carts.css" />
     <link rel="stylesheet" href="css/lightslider.css" />
     <link rel="shortcut icon" href="images/fav-icon.png" />
     <script
@@ -26,16 +27,16 @@
 
         
         <ul class="menu">
-          <li><a href="#">Home</a></li>
+          <li><a class='btn' href="index.html">Home</a></li>
 
           <li>
-            <a href="#">Shirts</a>
+            <a class='btn' href="shirts.html">Shirts</a>
             <span class="sale-label">Sale</span>
           </li>
 
-          <li><a href="#">Shoes</a></li>
-          <li><a href="#">Watches</a></li>
-          <li><a href="#">Bags</a></li>
+          <li><a class='btn' href="shoes.html">Shoes</a></li>
+          <li><a class='btn' href="watches.html">Watches</a></li>
+          <li><a class='btn' href="bags.html">Bags</a></li>
         </ul>
         <div class="right-menu">
           <a href="javascript:void(0);" class="search"> <i class="fas fa-search"> </i> </a
