--- a/Salesforce Assessment II/MichaelKevinAlabiDuobu_ShoppingCart_201105/index.html
+++ b/Salesforce Assessment II/MichaelKevinAlabiDuobu_ShoppingCart_201105/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Men's World</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/carts.css" />
@@ -25,21 +25,21 @@
           <img src="images/logo.png" />
         </a>
 
-        
         <ul class="menu">
-          <li><a class='btn' href="index.html">Home</a></li>
+          <li><a class="btn" href="index.html">Home</a></li>
 
           <li>
-            <a class='btn' href="shirts.html">Shirts</a>
+            <a class="btn" href="shirts.html">Shirts</a>
             <span class="sale-label">Sale</span>
           </li>
 
-          <li><a class='btn' href="shoes.html">Shoes</a></li>
-          <li><a class='btn' href="watches.html">Watches</a></li>
-          <li><a class='btn' href="bags.html">Bags</a></li>
+          <li><a class="btn" href="shoes.html">Shoes</a></li>
+          <li><a class="btn" href="watches.html">Watches</a></li>
+          <li><a class="btn" href="bags.html">Bags</a></li>
         </ul>
         <div class="right-menu">
-          <a href="javascript:void(0);" class="search"> <i class="fas fa-search"> </i> </a
+          <a href="javascript:void(0);" class="search">
+            <i class="fas fa-search"> </i> </a
           ><a href="javascript:void(0);" class="user">
             <i class="fas fa-user"> </i>
           </a>
@@ -83,7 +83,9 @@
         </form>
         <div class="form-btns">
           <a href="#" class="forget">Forgotten Password?</a>
-          <a href="javascript:void(0);" class="sign-up-btn">Create an Account</a>
+          <a href="javascript:void(0);" class="sign-up-btn"
+            >Create an Account</a
+          >
         </div>
       </div>
 
@@ -114,7 +116,9 @@
           <input type="submit" value="Sign up" />
         </form>
         <div class="form-btns">
-          <a href="javascript:void(0)" class="already-account">Already have an Account?</a>
+          <a href="javascript:void(0)" class="already-account"
+            >Already have an Account?</a
+          >
         </div>
       </div>
     </div>
